--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -38,7 +38,7 @@ body {
     width: 300px;
     margin: 100px auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: white;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -78,7 +78,7 @@ button {
     padding: 10px;
     background-color: #007bff;
     border: none;
-    color: #fff;
+    color: #ffffff;
     cursor: pointer;
 }
 
